# jrpcx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/research/: ANALYSIS_SUMMARY.txt  CODEBASE_LEARNINGS.md  DELIVERY_SUMMARY.md  EXPLORATORY_RESEARCH.md  FEATURES_ROADMAP.md  HTTPX_ANALYSIS.md  HTTPX_QUICK_REFERENCE.md  IMPLEMENTATION_PLAN.md  JAYSON_RESEARCH_REPORT.md  JRPC2_RESEARCH_REPORT.md  JSONRPCCLIENT_CODEBASE.md  PJRPC_RESEARCH_REPORT.md  README_ANALYSIS.md  RESEARCH_INDEX.md  RESEARCH_SUMMARY.md  TECHNICAL_DEEP_DIVE.md  YBBUS_JSONRPC_CODEBASE.md
src/jrpcx/: __init__.py  _batch.py  _client.py  _config.py  _exceptions.py  _id_generators.py  _logging.py  _middleware.py  _models.py  _types.py
src/jrpcx/_transports/: __init__.py  _http.py  _mock.py
src/jrpcx/middleware/: __init__.py  _retry.py
tests/: conftest.py  test_batch.py  test_batch_integration.py  test_client.py  test_config.py  test_cross_feature_integration.py  test_exceptions.py  test_hooks.py  test_id_generators.py  test_integration.py  test_lifecycle.py  test_logging_helpers.py  test_middleware.py  test_mock_transport.py  test_models.py  test_notifications.py  test_proxy.py  test_public_api.py  test_result_type.py  test_retry.py  test_serialization.py  test_transports.py  test_typed_errors.py  test_types.py
